--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    font-family: -apple-system, 
+    BlinkMacSystemFont, 'Segoe UI', Roboto, 
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 
+    'Helvetica Neue', sans-serif;
+    background: #05416e ;
+    color: #222;
+}
+
+.booklist{
+    width: 90vw;
+    max-width: 1170px;
+    margin: 5em auto;
+    display: grid;
+    gap: 2em;
+}
+
+@media screen and (min-width: 768px){
+    .booklist{
+        grid-template-columns: repeat(3, 1fr);
+        align-items: start;
+    }
+}
+
+.book {
+    background: rgb(255, 255, 255);
+    border-radius: 1rem;
+    padding: 1rem 2rem;
+}
+
+.book h1 {
+    margin-top: 0.5rem;
+}
+
+.book h4 {
+    color: #4667d1;
+    font-size: 0.99rem;
+    margin-top: 0.25rem;
+} 
+
+.book p {
+    margin-top: 0.5rem;
 }
